--- a/css/about-brand.css
+++ b/css/about-brand.css
@@ -3,6 +3,10 @@
     padding: 0 12px 28px;
 }
 
+.about-brand__container {
+    padding-top: 28px;
+}
+
 .about-brand img {
     display: block;
     width: 100%;
@@ -32,6 +36,10 @@
         max-width: 1324px;
         margin: 0 auto;
         padding-bottom: 72px;
+    }
+
+    .about-brand__container {
+        padding-top: 72px;
     }
 
     .about-brand img {
