--- a/css/video.css
+++ b/css/video.css
@@ -9,12 +9,26 @@
     display: block;
 }
 
+.banner-video {
+    /*position: absolute;*/
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
 @media (min-width: 1100px) {
     .video {
         padding: 72px 0;
     }
 
     .video img {
+        max-width: 1440px;
+    }
+
+    .banner-video {
         max-width: 1440px;
     }
 }
