--- a/css/catalog.css
+++ b/css/catalog.css
@@ -91,5 +91,7 @@
 
 .catalog-item img {
     display: block;
-    max-width: 100%;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1470px;
 }
