--- a/css/contacts.css
+++ b/css/contacts.css
@@ -58,6 +58,9 @@
         display: flex;
         flex-wrap: wrap;
         gap: 16px;
+        max-width: 860px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .contacts__item + .contacts__item {
@@ -76,7 +79,7 @@
         padding-bottom: 72px;
     }
 
-    .contacts__item {
-        width: calc(33.333% - 11px);
-    }
+    /*.contacts__item {*/
+    /*    width: calc(33.333% - 11px);*/
+    /*}*/
 }
