--- a/css/categories.css
+++ b/css/categories.css
@@ -45,6 +45,12 @@
     max-width: 100%;
     margin: 0 auto;
     filter: drop-shadow(0 0 0.75rem rgb(174, 123, 42));
+    transform: scale(1);
+    transition: all 0.4s ease;
+}
+
+.categories__item-new:hover img {
+    transform: scale(1.1);
 }
 
 .categories__item-new a {
@@ -55,6 +61,7 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
 
 /*.categories__item-new:last-child img {*/
 /*    height: 160px;*/
