--- a/css/catalog.css
+++ b/css/catalog.css
@@ -98,9 +98,13 @@
     }
 }
 
+.catalog-item {
+    background-color: var(--color-background);
+}
+
 .catalog-item img {
     display: block;
     margin: 0 auto;
     width: 100%;
-    max-width: 1470px;
+    max-width: 1000px;
 }
