--- a/css/footer.css
+++ b/css/footer.css
@@ -68,8 +68,8 @@
     }
 
     .footer__copyright {
-        margin-top: 0;
-        margin-bottom: 0;
+        /*margin-top: 0;*/
+        /*margin-bottom: 0;*/
         max-width: 515px;
     }
 
