--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 .header {
     background: var(--color-background);
     color: var(--color-text);
-    box-shadow: 0 5px 5px 0 rgba(0,0,0,0.25);
+    /*box-shadow: 0 5px 5px 0 rgba(0,0,0,0.25);*/
 }
 
 .header__banner {
