--- a/css/poster.css
+++ b/css/poster.css
@@ -1,5 +1,6 @@
 .poster {
     padding: 28px 0 0;
+    padding: 0;
     position: relative;
     margin-bottom: 28px;
     margin-left: auto;
@@ -31,6 +32,7 @@
 @media (min-width: 1100px) {
     .poster {
         padding: 72px 0 0;
+        padding: 0;
         margin-bottom: 72px;
     }
 
