--- a/css/video.css
+++ b/css/video.css
@@ -1,5 +1,6 @@
 .video {
     padding: 28px 0;
+    padding: 0;
 }
 
 .video img {
@@ -22,6 +23,7 @@
 @media (min-width: 1100px) {
     .video {
         padding: 72px 0;
+        padding: 0;
     }
 
     .video img {
