--- a/css/base.css
+++ b/css/base.css
@@ -1,9 +1,21 @@
+@font-face {
+    font-family: "Gilroy";
+    src: url("../assets/fonts/Gilroy-Regular.woff2") format("woff2");
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "Gilroy";
+    src: url("../assets/fonts/Gilroy-Bold.woff2") format("woff2");
+    font-weight: 700;
+}
+
 html {
     scroll-behavior: smooth;
 }
 
 * {
-    font-family: 'Noto Sans', sans-serif;
+    font-family: 'Gilroy', sans-serif;
     font-weight: 400;
     box-sizing: border-box;
     font-size: 12px;
@@ -14,7 +26,6 @@ body {
     margin: 0;
     padding: 0;
     background-color: var(--color-background);
-    background: linear-gradient(0deg, rgb(192, 192, 192) 0%, rgba(255,255,255,1) 100%);
     color: var(--color-text);
 }
 
@@ -25,7 +36,7 @@ body {
 
 h2 {
     margin: 0 0 21px;
-    font-family: "Mulish", sans-serif;
+    font-family: 'Gilroy', sans-serif;
     font-size: 16px;
     line-height: 2;
     font-weight: 700;
