--- a/css/catalog.css
+++ b/css/catalog.css
@@ -22,7 +22,7 @@
 
 .catalog__item {
     position: relative;
-    background-image: linear-gradient(45deg, #183262 0%, black 100%);
+    background-color: #b8dee2;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
     width: calc(50% - 8px);
 }
@@ -53,7 +53,7 @@
     max-width: 100%;
     max-height: 100%;
     overflow: hidden;
-    filter: drop-shadow(0 0 0.75rem rgb(15, 20, 107));
+    filter: drop-shadow(0 0 0.75rem #93dfe3);
 }
 
 .catalog__item-description {
