--- a/css/map.css
+++ b/css/map.css
@@ -27,7 +27,7 @@
         margin-bottom: 42px;
         font-size: 24px;
         line-height: 30px;
-        font-family: "Mulish", sans-serif;
+        font-family: 'Gilroy', sans-serif;
         font-weight: 700;
     }
 
