--- a/css/poster.css
+++ b/css/poster.css
@@ -15,19 +15,19 @@
     display: block;
 }
 
-.poster p {
-    position: absolute;
-    bottom: 18px;
-    left: 18px;
-    color: var(--color-background);
-    background-color: var(--color-banner);
-    text-transform: uppercase;
-    padding: 9px;
-    font-size: 12px;
-    line-height: 2;
-    font-family: "Mulish", sans-serif;
-    font-weight: 700;
-}
+/*.poster p {*/
+/*    position: absolute;*/
+/*    bottom: 18px;*/
+/*    left: 18px;*/
+/*    color: var(--color-background);*/
+/*    background-color: var(--color-banner);*/
+/*    text-transform: uppercase;*/
+/*    padding: 9px;*/
+/*    font-size: 12px;*/
+/*    line-height: 2;*/
+/*    font-family: 'Gilroy', sans-serif;*/
+/*    font-weight: 700;*/
+/*}*/
 
 @media (min-width: 1100px) {
     .poster {
